2006-11-06  Don Allingham  <don@gramps-project.org>
	* src/glade/gramps.glade: add tooltips for place buttons
	* src/GrampsWidgets.py: provide default instructions for place
	* src/DataViews/_MediaView.py: cancel drag-n-drop if list is empty
	* src/PageView.py: cancel drag-n-drop if list is empty
	* src/ViewManager.py (ViewManager.about): destroy About dialog 
	after running
	* src/Editors/_EditPerson.py: Change Unknown Gender dialog to allow
	the user to specify without going back to the main window
	* src/plugins/RemoveUnused.py: cleanup

2006-11-06  Alex Roitman  <shura@gramps-project.org>
	* NEWS: Update.

2006-11-05  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: Add street to place page.
	* src/plugins/NarrativeWeb.py: Add family event gallery items to 
	  individual page

2006-11-05  Don Allingham  <don@gramps-project.org>
	* src/plugins/Makefile.am: add RemoveUnused.py
	* src/plugins/RemoveUnused.py: remove unused sources and events, and UI
	* src/DataViews/_PersonView.py: provide a default surname for and Add
	Person button press based of selected item in the Person View tree.
	* help/C/various: remove unused files from manual
	* src/DataViews/_PlaceView.py: drag-n-drop support
	* src/GrampsWidgets.py: drag-n-drop support for place selector widget
	* src/ScratchPad.py: drag-n-drop support for places
	* src/DdTargets.py: drag-n-drop support for places

2006-11-05  Alex Roitman  <shura@gramps-project.org>
	* NEWS: Update.
	* configure.in (ALL_LINGUAS): Add Turkish language.

2006-11-04  Don Allingham  <don@gramps-project.org>
	* src/GrampsCfg.py: warn that chaning date format will not take
	effect until next start
	* src/DisplayState.py: remove redundant code

2006-11-04  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/ImportGeneWeb.py: Bugfixes (convert to new api);
	Add support for some more geneweb features

2006-11-03  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Bump up the version.